# genalg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README-CACHING.md  README.md  test_output.txt
.github/workflows/: ci.yaml
benches/: bench_bounded.rs  bench_ordinary.rs  bench_parallel.rs
src/: error.rs  evol_options.rs  lib.rs  magnitude.rs  phenotype.rs  rng.rs
src/breeding/: bounded.rs  combinatorial.rs  mod.rs  ordinary.rs
src/caching/: mod.rs
src/constraints/: combinatorial.rs  mod.rs
src/evolution/: builder.rs  caching_challenge.rs  challenge.rs  launcher.rs  mod.rs  options.rs
src/local_search/: application.rs  application_stategy.rs  hill_climbing.rs  hybrid.rs  manager.rs  mod.rs  simulated_annealing.rs  tabu_search.rs
src/rng/: rng.rs
src/selection/: elitist.rs  mod.rs  rank.rs  roulette.rs  selection_strategy.rs  tournament.rs
src/strategy/: adjust.rs  bounded.rs  combinatorial.rs  mod.rs  ordinary.rs
tests/: test_adjust.rs  test_bounded.rs  test_caching.rs  test_combinatorial.rs  test_ordinary.rs
