[package]
name = "genalg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.8.1"
thiserror = "2.0.11"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_ordinary"
harness = false

[[bench]]
name = "bench_bounded"
harness = false

[[bench]]
name = "bench_parallel"
harness = false
