[package]
name = "genalg"
version = "0.1.0"
edition = "2021"
authors = ["Tommy Nagy"]
description = "A flexible, high-performance genetic algorithm library written in Rust"
repository = "https://github.com/TommyN987/genalg"
license = "MIT"
keywords = ["genetic", "algorithm", "optimization", "evolutionary", "parallel"]
categories = ["algorithms", "science"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.8.1"
thiserror = "2.0.11"
tracing = "0.1.41"
thread_local = "1.1.8"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
criterion = "0.5.1"
tracing-subscriber = "0.3.19"
serde_json = "1.0"

[[bench]]
name = "bench_ordinary"
harness = false

[[bench]]
name = "bench_bounded"
harness = false

[[bench]]
name = "bench_parallel"
harness = false
